--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -100,6 +100,11 @@
 :nth-child(19) { --index: 19; }
 :nth-child(n + 20) { --index: 20; }
 
+::selection {
+	background: var(--color-accent, hsl(336 100% 50%));
+	color: white;
+}
+
 html {
 	color: black;
 	font: 110%/1.5 var(--font-sans);
