--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -904,6 +904,7 @@ body > footer {
 	font-family: var(--font-monospace);
 	font-weight: 600;
 	font-variant-ligatures: discretionary-ligatures;
+	white-space: pre-wrap;
 }
 
 code .token {
@@ -923,7 +924,6 @@ code:is(code, [class*="language-"]):not(pre *) {
 pre:is(pre, [class*="language-"][class*="language-"]) {
 	position: relative;
 	border: 0;
-	overflow: auto;
 	padding: 1rem var(--content-margin) .5rem;
 	margin: 0 calc(-1 * var(--content-margin));
 	border: 0 solid transparent;
@@ -931,6 +931,7 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 	box-sizing: content-box;
 	background: var(--color-accent2-light2);
 	font-size: 80%;
+	overflow: visible;
 
 	clip-path: polygon(var(--clip-top), var(--clip-bottom));
 	--clip-top: 0 0, 100% 2em;
@@ -949,7 +950,8 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 		display: contents;
 	}
 
-	& code {
+	& > code {
+		display: block;
 		background: transparent;
 		padding: 0;
 		text-shadow: none;
@@ -958,7 +960,6 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 	&:has(> code[data-file]) {
 		--clip-top: 0 -1em, 100% -1em;
 		padding-top: 0;
-		overflow: visible;
 
 		& > code[data-file] {
 			&::before {
@@ -967,7 +968,7 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 				top: -2.2em;
 				right: var(--content-margin);
 				margin: 0;
-				background: var(--color-accent2);
+				background: var(--color-accent);
 			}
 		}
 	}
