Add Atom feed, closes #13

--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -14,6 +14,7 @@
 	--icon-eyeglasses: "\F343";
 	--icon-info-lg: "\F646";
 	--icon-lightbulb-fill: "\F468";
+	--icon-rss-fill: "\F521";
 	--icon-stopwatch: "\F597";
 	--icon-tags: "\F5B2";
 }
