--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="{{ "style.css" if page_css == true else page_css }}">
 	{% endif %}
 	{{ includesEnd | safe }}
+	<link rel="alternate" type="application/atom+xml" title="Lea Verou &bull; Feed" href="/feed.xml" />
 	<script src="/assets/global.js" type="module"></script>
 </head>
 <body class="language-{{ defaultLanguage or "css" }}">
