Do not rotate gradient if prefers-reduced-motion: reduce, closes #17

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -500,12 +500,20 @@ button,
 	}
 }
 
+@media (prefers-reduced-motion: no-preference) {
+	body > header,
+	body > footer {
+		--background-gradient-start: calc(var(--scrolltop, 0) * .1deg);
+	}
+}
+
 body > header {
 	z-index: 1;
 	position: relative;
 	padding: var(--min-padding);
 	--header-bg-center: calc(var(--min-padding) + .75em) calc(2em - var(--scrolltop, 0) * 1px);
-	background: repeating-conic-gradient(from calc(var(--scrolltop, 0) * .1deg) at var(--header-bg-center), var(--color-accent2-light1) 0 4deg, transparent 0 8deg) fixed;
+
+	background: repeating-conic-gradient(from var(--background-gradient-start, 0deg) at var(--header-bg-center), var(--color-accent2-light1) 0 4deg, transparent 0 8deg) fixed;
 	background-color: var(--color-accent2-light2);
 
 	.site-meta {
@@ -622,7 +630,7 @@ body > footer {
 	gap: 1em;
 	padding: var(--min-padding) var(--content-margin);
 	margin-top: 2em;
-	background: repeating-conic-gradient(from calc(var(--scrolltop, 0) * .1deg) at calc(100% + 1em) calc(100% + 1em), rgb(0 0 0 / .1) 0 4deg, transparent 0 8deg) fixed;
+	background: repeating-conic-gradient(from var(--background-gradient-start, 0deg) at calc(100% + 1em) calc(100% + 1em), rgb(0 0 0 / .1) 0 4deg, transparent 0 8deg) fixed;
 	background-color: hsl(var(--gray) 23%);
 	border: 0 solid hsl(var(--gray) 95% / .2);
 	color: white;
