--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -613,6 +613,10 @@ body > header {
 		padding: 0 var(--content-margin);
 	}
 
+	.meta {
+		justify-content: center;
+	}
+
 	& h1 {
 		text-align: center;
 	}
@@ -778,7 +782,7 @@ body > footer {
 .meta {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 2em;
+	gap: 0 2em;
 
 	.tags {
 		margin-right: auto;
