Hide drafts and unlisted posts from feed

--- a/feed.njk
+++ b/feed.njk
@@ -29,6 +29,7 @@
   </author>
   {%- for post in collections.blog | reverse %}
   {%- set absolutePostUrl = post.data.compatUrl | absoluteUrl(metadata.url) -%}
+  {%- if not post.data.draft and not post.data.unlisted -%}
   <entry>
     <title>{{ post.data.title }}</title>
     <link href="{{ absolutePostUrl }}"/>
@@ -40,5 +41,6 @@
     {%- endif %}
     <content xml:lang="{{ metadata.language }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
   </entry>
+  {%- endif -%}
   {%- endfor %}
 </feed>
