--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -161,6 +161,10 @@ h1, h2, h3, h4, h5, h6, summary {
 	&[data-count]::before {
 		content: attr(data-count) " ";
 	}
+
+	& code {
+		font-weight: 900;
+	}
 }
 
 h1 {
@@ -960,7 +964,6 @@ body > footer {
 /* All Code */
 :is(pre, code):is(*, [class*="language-"], [class*="language-"]) {
 	font-family: var(--font-monospace);
-	font-weight: 600;
 	font-variant-ligatures: discretionary-ligatures;
 	white-space: pre-wrap;
 }
@@ -973,8 +976,7 @@ code .token {
 code:is(code, [class*="language-"]):not(pre *) {
 	padding: .2em .3em .2em;
 	border-radius: .15rem;
-	background: var(--color-accent2-light1);
-	mix-blend-mode: multiply;
+	background: var(--code-background, var(--color-accent2-light1));
 	font-size: 89%;
 }
 
@@ -988,8 +990,9 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 	border-width: 1.5em 0;
 	box-sizing: content-box;
 	background: var(--color-accent2-light2);
-	font-size: 80%;
 	overflow: visible;
+	font-size: 80%;
+	font-weight: 500;
 
 	clip-path: polygon(var(--clip-top), var(--clip-bottom));
 	--clip-top: 0 0, 100% 2em;
@@ -1602,14 +1605,11 @@ main aside {
 .info,
 .note,
 .tip {
+	--code-background: hsl(0 0% 100% / .8);
+
 	@supports (color: color-mix(in lab, white, black)) {
 		--color-lighter: color-mix(in lab, var(--color), white 88%);
 		--color-darker: color-mix(in lab, var(--color), black 20%);
-	}
-
-	a {
-		color: var(--link-color, var(--color, var(--color-accent)));
-		mix-blend-mode: multiply;
 	}
 
 	@media (width > 600px) {
@@ -1632,6 +1632,11 @@ main aside {
 		&::before {
 			left: 4.2rem;
 		}
+	}
+
+	a {
+		color: var(--link-color, var(--color, var(--color-accent)));
+		mix-blend-mode: multiply;
 	}
 }
 
