--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -111,15 +111,14 @@
 	{% endif %}
 </footer>
 
-
-{% include "_comments.njk" %}
+{%- include "_comments.njk" -%}
 
 </main>
 
 <footer>
 	<section class="social">
 		<h4>Social Me</h4>
-		{% include "_social.njk" %}
+		{%- include "_social.njk" -%}
 	</section>
 	<nav id="nav">
 		<h4>About me</h4>
