--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -225,7 +225,7 @@ h6 {
 
 p {
 	line-height: 1.5;
-	margin: 0 0 1em 0;
+	margin: 1em 0;
 }
 
 ul {
@@ -414,6 +414,24 @@ blockquote {
 	font-style: italic;
 }
 
+table {
+	border-spacing: 0;
+	border-collapse: collapse;
+
+	th, td {
+		border: 1px solid var(--color-gray-80);
+		padding: .2rem .4rem;
+	}
+
+	th {
+		text-align: left;
+		font-size: 80%;
+		font-family: var(--font-sans);
+		background: var(--color-accent);
+		color: white;
+	}
+}
+
 @property --color {
 	syntax: "<color>";
 	initial-value: transparent;
@@ -425,6 +443,14 @@ blockquote {
 	background: var(--color);
 	box-shadow: 0 0 calc(.2em + .8em * var(--number)) calc(.1em + .8em * var(--number)) var(--color);
 	animation: to1 2s 1s both;
+}
+
+input {
+	font: inherit;
+
+	&[type=number] {
+		width: 6ch;
+	}
 }
 
 button,
