Better footnote styling

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1826,3 +1826,17 @@ a.feed {
 		content: var(--icon-rss-fill);
 	}
 }
+
+@counter-style refs {
+	system: extends decimal;
+	prefix: "[";
+	suffix: "] ";
+}
+
+.footnotes {
+
+
+	ol {
+		list-style: refs;
+	}
+}
