Add example of what brackets are

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1697,7 +1697,7 @@ main aside {
 }
 
 .info {
-	--label: "Info";
+	--label: "FYI";
 	--icon: var(--icon-info-lg);
 	--color: var(--color-blue);
 	--color-light: var(--color-lighter);
