--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -813,6 +813,10 @@ body > footer {
 		--icon: var(--icon-date);
 	}
 
+	&.dt-updated {
+		--icon: var(--icon-edit);
+	}
+
 	&.comment-count {
 		--icon: var(--icon-comments);
 
